--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ server.port=8087
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/com
-spring.datasource.username=com
-spring.datasource.password=com01
+
+spring.datasource.url=jdbc:project-db-campus.smhrd.com
+spring.datasource.username=sc_24K_LI4_p2_1
+spring.datasource.password=smhrd1
+
 mybatis.type-aliases-package=com.smhrd.web.entity
 mybatis.mapper-locations=classpath:/com/smhrd/web/mapper/*.xml
 
