--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:project-db-campus.smhrd.com
+spring.datasource.url=jdbc:project-db-campus.smhrd.com:3312/
 spring.datasource.username=sc_24K_LI4_p2_1
 spring.datasource.password=smhrd1
 
