--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,38 @@ spring.servlet.multipart.max-request-size=100MB
 #업로드 파일 저장 경로설정
 #Multipart를 통해서 저장되는 모든 파일이 이경로로 저장된다. 분리 불가능
 spring.servlet.multipart.location=C:/Users/smart/Documents/workspace-spring-tools-for-eclipse-4.31.0.RELEASE/CookingFree/src/main/webapp/upload/
+
+# ?? ??? ??? ???? ???? ??
+# ??
+spring.security.oauth2.client.registration.google.client-id=529179965978-5g91srogsvl05et57ndg7nvnsk7e1c5v.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=email
+
+# ???
+spring.security.oauth2.client.registration.naver.client-id=GXDE_mIBJJkkbFrBsBPf
+spring.security.oauth2.client.registration.naver.client-secret=DtJTwwsVsa
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+# ???
+spring.security.oauth2.client.registration.kakao.client-id=9811778d362df90b80f59779b20478ed
+spring.security.oauth2.client.registration.kakao.client-secret=MBAbYiyQy5ZckuSoi6mEaOsqque6f3L1
+spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.client-authentication-method=POST
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=id
+
+
+# Spring Security ??? ?? ??
+logging.level.org.springframework.security=DEBUG
+
+# Spring MVC ??? ?? ?? (????? ????? ???)
+logging.level.org.springframework.web=INFO
