로그인성?공

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,12 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:project-db-campus.smhrd.com:3312/
+spring.datasource.url=jdbc:mysql://project-db-campus.smhrd.com:3312/sc_24K_LI4_p2_1?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=sc_24K_LI4_p2_1
 spring.datasource.password=smhrd1
+
+
+
 
 mybatis.type-aliases-package=com.smhrd.web.entity
 mybatis.mapper-locations=classpath:/com/smhrd/web/mapper/*.xml
