회원가입 / SNS 경우 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 
 spring.application.name=CookingFree
 server.servlet.context-path=/web
+server.servlet.session.cookie.path=/web
+
 
 
 server.port=8087
