마이페이지 DB수정 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=CookingFree
 server.servlet.context-path=/web
 server.servlet.session.cookie.path=/web
-
+server.servlet.session.cookie.same-site=LAX
 
 
 server.port=8087
