--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,17 +17,40 @@ spring.datasource.password=smhrd1
 
 
 
+# JPA 설정
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# 챗봇 관련 설정
+chatbot.response.max-length=1000
+chatbot.session.timeout=3600
+chatbot.api.rate-limit.enabled=true
+chatbot.api.rate-limit.requests-per-minute=3
+chatbot.api.rate-limit.requests-per-day=150
+spring.ai.openai.api-key=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
+# 또는 Chat 전용 프로퍼티
+spring.ai.openai.chat.api-key=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
+
+
+# 로깅 설정
+logging.level.com.smhrd.web=DEBUG
+logging.level.org.springframework.web=INFO
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
+
+
 
 mybatis.type-aliases-package=com.smhrd.web.entity
 mybatis.mapper-locations=classpath:/com/smhrd/web/mapper/*.xml
 
-#파일업로드시 필요한 설정
-#전송받을 파일의 최대 크기를 설정하는 방법
+#íì¼ìë¡ëì íìí ì¤ì 
+#ì ì¡ë°ì íì¼ì ìµë í¬ê¸°ë¥¼ ì¤ì íë ë°©ë²
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-#업로드 파일 저장 경로설정
-#Multipart를 통해서 저장되는 모든 파일이 이경로로 저장된다. 분리 불가능
+#ìë¡ë íì¼ ì ì¥ ê²½ë¡ì¤ì 
+#Multipartë¥¼ íµí´ì ì ì¥ëë ëª¨ë  íì¼ì´ ì´ê²½ë¡ë¡ ì ì¥ëë¤. ë¶ë¦¬ ë¶ê°ë¥
 spring.servlet.multipart.location=C:/Users/smart/Documents/workspace-spring-tools-for-eclipse-4.31.0.RELEASE/CookingFree/src/main/webapp/upload/
 
 # ?? ??? ??? ???? ???? ??
@@ -63,4 +86,3 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 logging.level.org.springframework.security=DEBUG
 
 # Spring MVC ??? ?? ?? (????? ????? ???)
-logging.level.org.springframework.web=INFO
