레시피인덱스 살짝

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=CookingFree
 server.servlet.context-path=/web
 server.servlet.session.cookie.path=/web
 server.servlet.session.cookie.same-site=LAX
-
+app.upload.base-dir=src/main/webapp/upload/profile
 
 server.port=8087
 
