--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
 			<artifactId>korean-text</artifactId>
 			<version>4.4.4</version>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 
 
 
