--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.servlet.multipart.max-request-size=100MB
 
 #ìë¡ë íì¼ ì ì¥ ê²½ë¡ì¤ì 
 #Multipartë¥¼ íµí´ì ì ì¥ëë ëª¨ë  íì¼ì´ ì´ê²½ë¡ë¡ ì ì¥ëë¤. ë¶ë¦¬ ë¶ê°ë¥
-spring.servlet.multipart.location=C:/Users/smart/Documents/workspace-spring-tools-for-eclipse-4.31.0.RELEASE/CookingFree/src/main/webapp/upload/
+spring.servlet.multipart.location=C:/temp/tomcat-upload-temp
 
 # ?? ??? ??? ???? ???? ??
 # ??
@@ -86,3 +86,5 @@ spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 logging.level.org.springframework.security=DEBUG
 
 # Spring MVC ??? ?? ?? (????? ????? ???)
+
+logging.level.jdbc.sqlonly=TRACE
