--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,10 @@ spring.application.name=CookingFree
 server.servlet.context-path=/web
 server.servlet.session.cookie.path=/web
 server.servlet.session.cookie.same-site=LAX
-app.upload.base-dir=src/main/webapp/upload/profile
+app.upload.base-dir=src/main/webapp/upload
+app.upload.review-dir=src/main/webapp/upload/reviews
+app.upload.profile-dir=src/main/webapp/upload/profile
+spring.servlet.multipart.location=./tmp
 
 server.port=8087
 
@@ -51,7 +54,7 @@ spring.servlet.multipart.max-request-size=100MB
 
 #ìë¡ë íì¼ ì ì¥ ê²½ë¡ì¤ì 
 #Multipartë¥¼ íµí´ì ì ì¥ëë ëª¨ë  íì¼ì´ ì´ê²½ë¡ë¡ ì ì¥ëë¤. ë¶ë¦¬ ë¶ê°ë¥
-spring.servlet.multipart.location=C:/temp/tomcat-upload-temp
+
 
 # ?? ??? ??? ???? ???? ??
 # ??
