마이페이지 이미지 빈거 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=CookingFree
 server.servlet.context-path=/web
 server.servlet.session.cookie.path=/web
 server.servlet.session.cookie.same-site=LAX
-app.upload.base-dir=src/main/webapp/upload
-app.upload.review-dir=src/main/webapp/upload/reviews
-app.upload.profile-dir=src/main/webapp/upload/profile
+app.upload.base-dir    = src/main/webapp/upload
+app.upload.profile-dir = ${app.upload.base-dir}/profile
+app.upload.review-dir  = ${app.upload.base-dir}/reviews
 spring.servlet.multipart.location=./tmp
 
 server.port=8087
