--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,24 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		    <spring.version>6.2.8</spring.version>
 	</properties>
 	<dependencies>
+	
+		
+    <!-- Spring Web MVC -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${spring.version}</version>
+    </dependency>
+
+    <!-- Commons FileUpload for CommonsMultipartResolver -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.5</version>
+    </dependency>
 		
 	
 		<!-- Commons Text: CosineSimilarity, TfIdfVectorizer -->
