--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "app.upload.base-dir",
     "type": "java.lang.String",
     "description": "A description for 'app.upload.base-dir'"
+  },
+  {
+    "name": "spring.servlet.multipart.max-request-parameters",
+    "type": "java.lang.String",
+    "description": "A description for 'spring.servlet.multipart.max-request-parameters'"
   }
 ]}
