--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,24 +20,24 @@ spring.datasource.password=smhrd1
 
 
 
-# JPA 설정
+# JPA ì¤ì 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# 챗봇 관련 설정
+# ì±ë´ ê´ë ¨ ì¤ì 
 chatbot.response.max-length=1000
 chatbot.session.timeout=3600
 chatbot.api.rate-limit.enabled=true
 chatbot.api.rate-limit.requests-per-minute=3
 chatbot.api.rate-limit.requests-per-day=150
 spring.ai.openai.api-key=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
-# 또는 Chat 전용 프로퍼티
+# ëë Chat ì ì© íë¡í¼í°
 spring.ai.openai.chat.api-key=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
 
 
-# 로깅 설정
+# ë¡ê¹ ì¤ì 
 logging.level.com.smhrd.web=DEBUG
 logging.level.org.springframework.web=INFO
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
@@ -47,13 +47,24 @@ logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 mybatis.type-aliases-package=com.smhrd.web.entity
 mybatis.mapper-locations=classpath:/com/smhrd/web/mapper/*.xml
 
-#íì¼ìë¡ëì íìí ì¤ì 
-#ì ì¡ë°ì íì¼ì ìµë í¬ê¸°ë¥¼ ì¤ì íë ë°©ë²
+#Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂÃ¬ÂÂ Ã­ÂÂÃ¬ÂÂÃ­ÂÂ Ã¬ÂÂ¤Ã¬Â Â
+#Ã¬Â ÂÃ¬ÂÂ¡Ã«Â°ÂÃ¬ÂÂ Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂ Ã¬ÂµÂÃ«ÂÂ Ã­ÂÂ¬ÃªÂ¸Â°Ã«Â¥Â¼ Ã¬ÂÂ¤Ã¬Â ÂÃ­ÂÂÃ«ÂÂ Ã«Â°Â©Ã«Â²Â
+# 기본 멀티파트 처리(Embedded 톰캣) 사용
+# ── Spring MVC Multipart 설정 ─────────────────────────────
+spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-#ìë¡ë íì¼ ì ì¥ ê²½ë¡ì¤ì 
-#Multipartë¥¼ íµí´ì ì ì¥ëë ëª¨ë  íì¼ì´ ì´ê²½ë¡ë¡ ì ì¥ëë¤. ë¶ë¦¬ ë¶ê°ë¥
+# ── Tomcat 커넥터 레벨 Multipart 파츠 제한 설정 ────────────
+server.tomcat.max-http-form-post-size=-1
+server.tomcat.max-swallow-size=-1
+server.tomcat.max-part-count=100
+server.tomcat.max-part-header-size=10240  
+
+# 톰캣 Multipart Resolver 파트 개수 제한 해제
+#spring.servlet.multipart.max-request-parameters=1000
+#Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂ Ã­ÂÂÃ¬ÂÂ¼ Ã¬Â ÂÃ¬ÂÂ¥ ÃªÂ²Â½Ã«Â¡ÂÃ¬ÂÂ¤Ã¬Â Â
+#MultipartÃ«Â¥Â¼ Ã­ÂÂµÃ­ÂÂ´Ã¬ÂÂ Ã¬Â ÂÃ¬ÂÂ¥Ã«ÂÂÃ«ÂÂ Ã«ÂªÂ¨Ã«ÂÂ  Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂ´ Ã¬ÂÂ´ÃªÂ²Â½Ã«Â¡ÂÃ«Â¡Â Ã¬Â ÂÃ¬ÂÂ¥Ã«ÂÂÃ«ÂÂ¤. Ã«Â¶ÂÃ«Â¦Â¬ Ã«Â¶ÂÃªÂ°ÂÃ«ÂÂ¥
 
 
 # ?? ??? ??? ???? ???? ??
