휴대폰으로 띄운거 음성인식까지 성공
Signed-off-by: LeeMJ <jeun258@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 
+
+
 spring.application.name=CookingFree
 server.servlet.context-path=/web
 server.servlet.session.cookie.path=/web
@@ -9,6 +11,15 @@ app.upload.review-dir  = ${app.upload.base-dir}/reviews
 spring.servlet.multipart.location=./tmp
 
 server.port=8087
+# new pfx required
+server.ssl.enabled=true
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=classpath:cert.pfx
+server.ssl.key-store-password=312
+# https://www.devglan.com/online-tools/generate-self-signed-cert
+
+# https://www.ssltrust.com.au/ssl-tools/pfx-file-generator
+# pw need
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -20,55 +31,47 @@ spring.datasource.password=smhrd1
 
 
 
-# JPA ì¤ì 
+# JPA ??
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# ì±ë´ ê´ë ¨ ì¤ì 
+# ?? ?? ??
 chatbot.response.max-length=1000
 chatbot.session.timeout=3600
 chatbot.api.rate-limit.enabled=true
 chatbot.api.rate-limit.requests-per-minute=3
 chatbot.api.rate-limit.requests-per-day=150
 spring.ai.openai.api-key=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
-# ëë Chat ì ì© íë¡í¼í°
+
 spring.ai.openai.chat.api-key=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
 
 
-# ë¡ê¹ ì¤ì 
+# ?? ??
 logging.level.com.smhrd.web=DEBUG
 logging.level.org.springframework.web=INFO
 logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n
 
 
-
+# MyBatis ??
 mybatis.type-aliases-package=com.smhrd.web.entity
 mybatis.mapper-locations=classpath:/com/smhrd/web/mapper/*.xml
 
-#Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂÃ¬ÂÂ Ã­ÂÂÃ¬ÂÂÃ­ÂÂ Ã¬ÂÂ¤Ã¬Â Â
-#Ã¬Â ÂÃ¬ÂÂ¡Ã«Â°ÂÃ¬ÂÂ Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂ Ã¬ÂµÂÃ«ÂÂ Ã­ÂÂ¬ÃªÂ¸Â°Ã«Â¥Â¼ Ã¬ÂÂ¤Ã¬Â ÂÃ­ÂÂÃ«ÂÂ Ã«Â°Â©Ã«Â²Â
-# 기본 멀티파트 처리(Embedded 톰캣) 사용
-# ── Spring MVC Multipart 설정 ─────────────────────────────
+# Spring MVC ???? ??
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-# ── Tomcat 커넥터 레벨 Multipart 파츠 제한 설정 ────────────
+# ?? ???? ???? ?? ??
 server.tomcat.max-http-form-post-size=-1
 server.tomcat.max-swallow-size=-1
 server.tomcat.max-part-count=100
 server.tomcat.max-part-header-size=10240  
 
-# 톰캣 Multipart Resolver 파트 개수 제한 해제
-#spring.servlet.multipart.max-request-parameters=1000
-#Ã¬ÂÂÃ«Â¡ÂÃ«ÂÂ Ã­ÂÂÃ¬ÂÂ¼ Ã¬Â ÂÃ¬ÂÂ¥ ÃªÂ²Â½Ã«Â¡ÂÃ¬ÂÂ¤Ã¬Â Â
-#MultipartÃ«Â¥Â¼ Ã­ÂÂµÃ­ÂÂ´Ã¬ÂÂ Ã¬Â ÂÃ¬ÂÂ¥Ã«ÂÂÃ«ÂÂ Ã«ÂªÂ¨Ã«ÂÂ  Ã­ÂÂÃ¬ÂÂ¼Ã¬ÂÂ´ Ã¬ÂÂ´ÃªÂ²Â½Ã«Â¡ÂÃ«Â¡Â Ã¬Â ÂÃ¬ÂÂ¥Ã«ÂÂÃ«ÂÂ¤. Ã«Â¶ÂÃ«Â¦Â¬ Ã«Â¶ÂÃªÂ°ÂÃ«ÂÂ¥
 
 
-# ?? ??? ??? ???? ???? ??
-# ??
+# OAuth2 ??? ?? (Google)
 spring.security.oauth2.client.registration.google.client-id=529179965978-5g91srogsvl05et57ndg7nvnsk7e1c5v.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8087/web/login/oauth2/code/google
@@ -96,9 +99,9 @@ spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.co
 spring.security.oauth2.client.provider.kakao.user-name-attribute=id
 
 
-# Spring Security ??? ?? ??
+# Spring Security ??? ??
 logging.level.org.springframework.security=DEBUG
 
-# Spring MVC ??? ?? ?? (????? ????? ???)
+# Spring MVC ???
 
 logging.level.jdbc.sqlonly=TRACE
