--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,18 @@ server.port=8087
 server.ssl.enabled=true
 server.ssl.key-store-type=PKCS12
 server.ssl.key-store=classpath:cert.pfx
-server.ssl.key-store-password=312
+server.ssl.key-store-password=123
 # https://www.devglan.com/online-tools/generate-self-signed-cert
 
 # https://www.ssltrust.com.au/ssl-tools/pfx-file-generator
 # pw need
+
+server.use-forward-headers=true
+
+# Forwarded-Proto 헤더를 스킴 정보로 사용할 헤더 이름 지정
+server.tomcat.protocol-header=X-Forwarded-Proto
+
+
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -74,13 +81,13 @@ server.tomcat.max-part-header-size=10240
 # OAuth2 ??? ?? (Google)
 spring.security.oauth2.client.registration.google.client-id=529179965978-5g91srogsvl05et57ndg7nvnsk7e1c5v.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8087/web/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=email
 
 # ???
 spring.security.oauth2.client.registration.naver.client-id=GXDE_mIBJJkkbFrBsBPf
 spring.security.oauth2.client.registration.naver.client-secret=DtJTwwsVsa
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8087/web/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
@@ -90,7 +97,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 # ???
 spring.security.oauth2.client.registration.kakao.client-id=9811778d362df90b80f59779b20478ed
 spring.security.oauth2.client.registration.kakao.client-secret=MBAbYiyQy5ZckuSoi6mEaOsqque6f3L1
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8087/web/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
