--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -90,13 +90,13 @@ server.tomcat.max-part-header-size=10240
 # OAuth2 ??? ?? (Google)
 spring.security.oauth2.client.registration.google.client-id=529179965978-5g91srogsvl05et57ndg7nvnsk7e1c5v.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
-spring.security.oauth2.client.registration.google.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://localhost:8087/web/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=email
 
 # ???
 spring.security.oauth2.client.registration.naver.client-id=GXDE_mIBJJkkbFrBsBPf
 spring.security.oauth2.client.registration.naver.client-secret=DtJTwwsVsa
-spring.security.oauth2.client.registration.naver.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=https://localhost:8087/web/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
@@ -106,7 +106,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 # ???
 spring.security.oauth2.client.registration.kakao.client-id=9811778d362df90b80f59779b20478ed
 spring.security.oauth2.client.registration.kakao.client-secret=MBAbYiyQy5ZckuSoi6mEaOsqque6f3L1
-spring.security.oauth2.client.registration.kakao.redirect-uri=https://coockingfree.com:8087/web/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://localhost:8087/web/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
